<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/font_label" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            style="@style/Item"
            android:text="@string/text" />

        <de.dkiefner.fossets.widget.TypefaceTextView
            android:id="@+id/tf_text"
            style="@style/Item"
            android:text="@string/tf_text"
            app:typeface="@string/font_good_dog" />

        <de.dkiefner.fossets.widget.TypefaceEditText
            android:id="@+id/tf_edit"
            style="@style/Item"
            android:hint="@string/tf_edit"
            android:text="@string/tf_edit"
            app:typeface="@string/font_good_dog" />

        <de.dkiefner.fossets.widget.TypefaceButton
            android:id="@+id/tf_button"
            style="@style/Item"
            android:text="@string/tf_button"
            app:typeface="@string/font_good_dog" />

        <de.dkiefner.fossets.widget.TypefaceToggleButton
            android:id="@+id/tf_togglebutton"
            style="@style/Item"
            app:typeface="@string/font_good_dog" />
    </LinearLayout>

</RelativeLayout>